<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_produk_baru"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_kode"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/kode_produk"
        android:hint="@string/kode_produk"
        android:inputType="text" android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/nama_produk"
        android:hint="@string/nama_produk"
        android:inputType="text|textAutoComplete"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/edt_kode" />

    <EditText
        android:id="@+id/edt_harga"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/harga"
        android:hint="@string/harga"
        android:inputType="number"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/edt_nama" />

    <EditText
        android:id="@+id/edt_stok"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/stok"
        android:hint="@string/stok"
        android:inputType="number"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintTop_toBottomOf="@id/edt_harga" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/simpan_produk"
        app:layout_constraintTop_toBottomOf="@id/edt_stok" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>